--- a/org/refile.org
+++ b/org/refile.org
@@ -243,3 +243,9 @@ openssl enc -des -d -a -in <filename.des> -out <filename>
 * TODO move openvpn and hgpush to turbo-dt .
   CLOCK: [2011-09-24 Sat 23:50]--[2011-09-25 Sun 00:35] =>  0:45
 [2011-09-24 Sat 23:50]
+* Write an invitation message from snoc-engineering 		       :NOTE:
+   CLOCK: [2011-09-25 Sun 09:41]--[2011-09-25 Sun 09:55] =>  0:14
+[2011-09-25 Sun 09:41]
+[[file:~/org/gemstone.org::*%E7%A1%AE%E5%AE%9A%E6%99%AE%E9%80%9A%E6%9C%BA%E5%99%A8%E4%B8%8A%E9%9C%80%E8%A6%81%E5%AE%89%E8%A3%85%E7%9A%84%20tops%20%E5%8C%85%EF%BC%8C%E6%9D%A5%E8%AF%84%E4%BC%B0%E7%B3%BB%E7%BB%9F%E5%BD%B1%E5%93%8D.][确定普通机器上需要安装的 tops 包，来评估系统影响.]]
+
+一个地下 system & network operation center
