--- a/org/refile.org
+++ b/org/refile.org
@@ -232,7 +232,9 @@ net.ipv4.ip_forward=1
 iptables -t nat -
 
 给用户添加key
-
+ssh newbie && sudo
+cd tops-rsa && source ./vars
+then:
 ./build-key <username>.corp.linuxnote.net 
 # 生成 3个文件
 将build 好的key 中的 <username>.corp.linuxnote.net.{crt,key} 和 ca.crt copy 到给用户,最好用邮件发送.
