--- a/org/refile.org
+++ b/org/refile.org
@@ -75,6 +75,9 @@ appropriate category.
   连同mta (qmail or postfix) 配置实现本地的邮件配置. 
   可以让自己通过 gnus 阅读邮件，在17forex 可以收发邮件。
   目前考虑的方法在 17forex 上面配置一个 fetchmail + gnus
+  pastebin:
+  
+
   CLOCK: [2011-09-20 Tue 09:49]--[2011-09-20 Tue 09:52] =>  0:03
   :PROPERTIES:
   :ORDERED:  t
@@ -192,7 +195,6 @@ appropriate category.
 
 
 ** 生成 key 
-   CLOCK: [2011-09-25 Sun 10:31]
 
 openvpn dep on:
 CA 证书
@@ -259,3 +261,12 @@ openssl enc -des -d -a -in <filename.des> -out <filename>
 [[file:~/org/gemstone.org::*%E7%A1%AE%E5%AE%9A%E6%99%AE%E9%80%9A%E6%9C%BA%E5%99%A8%E4%B8%8A%E9%9C%80%E8%A6%81%E5%AE%89%E8%A3%85%E7%9A%84%20tops%20%E5%8C%85%EF%BC%8C%E6%9D%A5%E8%AF%84%E4%BC%B0%E7%B3%BB%E7%BB%9F%E5%BD%B1%E5%93%8D.][确定普通机器上需要安装的 tops 包，来评估系统影响.]]
 
 一个地下 system & network operation center
+* TODO 
+  CLOCK: [2011-09-26 Mon 10:38]
+  CLOCK: [2011-09-26 Mon 10:37]--[2011-09-26 Mon 10:38] =>  0:01
+[2011-09-26 Mon 10:37]
+[[file:~/org/refile.org::*%E9%9C%80%E8%A6%81%E5%AF%B9%E6%AF%8F%E4%B8%80%E4%B8%AA%E7%9B%AE%E5%89%8D%E5%B7%B2%E7%BB%8F%E6%9C%89%E7%9A%84%E5%AE%89%E8%A3%85%E5%8C%85%E8%BF%9B%E8%A1%8C%E4%B8%80%E6%AC%A1%E6%95%B4%E4%BD%93review.][需要对每一个目前已经有的安装包进行一次整体review.]]
+
+* TODO 每日功课
+[2011-09-26 Mon 10:38]
+[[file:~/org/forex.org::*%E6%95%B4%E7%90%86%E4%B8%80%E4%B8%AA%20forex.org%20%E5%B0%86%E6%97%A5%E5%B8%B8%E7%9A%84%E4%BA%A4%E6%98%93%E6%96%B9%E9%9D%A2%E7%9A%84%E4%B8%9C%E8%A5%BF%E6%94%BE%E5%9C%A8%E8%BF%99%E4%B8%AA%E6%96%87%E4%BB%B6%E9%87%8C][整理一个 forex.org 将日常的交易方面的东西放在这个文件里]]
