--- a/org/forex.org
+++ b/org/forex.org
@@ -30,3 +30,8 @@
 2. 有交易记录表，可以对日常的交易做一些行为分析。
 3. 交易心得和总结 。
 
+** TODO 每日功课 (如何让每天都提醒这个任务进行)
+  CLOCK: [2011-09-26 Mon 10:40]--[2011-09-26 Mon 11:14] =>  0:34
+[2011-09-26 Mon 10:38]
+做多加元
+
