--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -6,6 +6,24 @@
 ** 确定机器的部署范围. (仅仅motd)
 *** amdin 规划
 **** 确定以及部署 gemserver
+**** TODO 需要对每一个目前已经有的安装包进行一次整体review.
+  主要看 daemontools + tops-gemclient-run
+  
+  CLOCK: [2011-09-20 Tue 14:50]--[2011-09-20 Tue 14:53] =>  0:03
+[2011-09-20 Tue 14:50]
+[[file:~/org/refile.org::*%E6%94%B6%E9%9B%86%E6%89%80%E6%9C%89%E7%9A%84gemstone%20cover%E5%88%B0%E7%9A%84%E8%BD%AF%E4%BB%B6%E5%8C%85%E9%9B%86%E4%BD%93%E5%8D%87%E7%BA%A7%E5%88%B0%20TOPS%20tag][收集所有的gemstone cover到的软件包集体升级到 TOPS tag]]
+
+***** DONE 开个小会..
+  1. gemstone 如何上生产.
+  2. cmos 上线.
+  CLOCK: [2011-09-20 Tue 16:12]--[2011-09-20 Tue 17:34] =>  1:22
+[2011-09-20 Tue 16:12]
+**** TODO opsfree 和 gemstone 信息交互。
+  1. 通过mako 把opsfree 里面的数据 + HOSTS/nodes.cf GROUPS/nodes.cf
+  2. 人来编辑模板，实现机器和人可以coedit HOSTS/nodes.cf GROUPS/nodes.cf
+  CLOCK: [2011-09-20 Tue 09:52]--[2011-09-20 Tue 09:57] =>  0:05
+[2011-09-20 Tue 09:52]
+[[file:~/org/todolist.org::*@SQA%20%E7%9A%84%E6%9C%BA%E5%99%A8%E9%9C%80%E8%A6%81%E9%83%A8%E5%B1%9E%E4%B8%8A%E6%89%80%E6%9C%89%E7%9A%84gemclient][@SQA 的机器需要部属上所有的gemclient]]
 *** gemclient 部署
 **** 确定 gemclient 的部署步骤.
 **** 确定普通机器上需要安装的 tops 包，来评估系统影响.
