--- a/org/learning-orgmode.org
+++ b/org/learning-orgmode.org
@@ -3,4 +3,9 @@
 [2011-09-20 Tue 10:12]
 
 ** 建立一个定期的任务，每天可以定期执行
-** 打开一个
+** 打开一个 org-mode 中的文字链接
+   CLOCK: [2011-09-26 Mon 13:13]--[2011-09-26 Mon 13:14] =>  0:01
+   org-open-at-point
+   C-c C-o
+   
+
