--- a/org/diary.org
+++ b/org/diary.org
@@ -1,1 +1,12 @@
 * 日志
+* 2011
+** 2011-09 September
+*** 2011-09-26 Monday
+**** 今天这是我的日记
+[2011-09-26 Mon 15:40]
+
+   好了，日记写完了一篇
+**** 我的日记二
+[2011-09-26 Mon 15:41]
+
+   又写完一篇
