--- a/org/learning-orgmode.org
+++ b/org/learning-orgmode.org
@@ -1,10 +1,13 @@
 * 学习 orgmode
 ** TODO org-mode定期的任务场景如何进行org.
+   CLOCK: [2011-09-26 Mon 15:40]--[2011-09-26 Mon 15:41] =>  0:01
+   CLOCK: [2011-09-26 Mon 15:30]--[2011-09-26 Mon 15:40] =>  0:10
 [2011-09-20 Tue 10:12]
 
 ** 建立一个定期的任务，每天可以定期执行
 ** 打开一个 org-mode 中的文字链接
    CLOCK: [2011-09-26 Mon 13:13]--[2011-09-26 Mon 13:14] =>  0:01
+
    org-open-at-point
    C-c C-o
 ** Yasnippet   
