--- a/org/docs/orgmode-tut.org
+++ b/org/docs/orgmode-tut.org
@@ -24,10 +24,8 @@ foreign to you.  More information about org-mode can be found in the
 
 我已经使用 org-mode 作为我个人的信息管理器几年了，从开始默认的 =TODO= 和
 =DONE=  两个关键词, 到现在不断的小调整进化到这篇文档我所描述的样子.
-I have been using org-mode as my personal information manager for
-years now.  I started small with just the default =TODO= and =DONE=
-keywords.  I added small changes to my workflow and over time it
-evolved into what is described by this document.
+
+我仍然改变着我的工作流，时不时的尝试一些新的东西. 
 
 I still change my workflow and try new things regularly.  This
 document describes mature workflows in my current org-mode setup.  I
