--- a/org/refile.org
+++ b/org/refile.org
@@ -58,11 +58,16 @@ appropriate category.
 [2011-09-22 Thu 12:54]
 [[file:~/.emacs.d/tp/tradeplan.el]]
 东三环北路 38 号院 1号楼 15层.
-* TODO move openvpn and hgpush to turbo-dt .
-  CLOCK: [2011-09-24 Sat 23:50]--[2011-09-25 Sun 00:35] =>  0:45
+* DONE move openvpn and hgpush to turbo-dt .
+  CLOCK: [2011-09-24 Sat 23:50]--[2011-09-26 Mon 16:08] => 40:18
 [2011-09-24 Sat 23:50]
 * Write an invitation message from snoc-engineering 		       :NOTE:
    CLOCK: [2011-09-25 Sun 09:41]--[2011-09-25 Sun 09:55] =>  0:14
 [2011-09-25 Sun 09:41]
 [[file:~/org/gemstone.org::*%E7%A1%AE%E5%AE%9A%E6%99%AE%E9%80%9A%E6%9C%BA%E5%99%A8%E4%B8%8A%E9%9C%80%E8%A6%81%E5%AE%89%E8%A3%85%E7%9A%84%20tops%20%E5%8C%85%EF%BC%8C%E6%9D%A5%E8%AF%84%E4%BC%B0%E7%B3%BB%E7%BB%9F%E5%BD%B1%E5%93%8D.][确定普通机器上需要安装的 tops 包，来评估系统影响.]]
 
+* TODO 翻译 reminders 尝试使用 orgmode 做提醒
+  :LOGBOOK:
+  :END:
+[2011-09-26 Mon 17:13]
+[[file:~/org/docs/orgmode-tut.org::*Reminders][Reminders]]
