--- a/org/refile.org
+++ b/org/refile.org
@@ -66,8 +66,10 @@ appropriate category.
 [2011-09-25 Sun 09:41]
 [[file:~/org/gemstone.org::*%E7%A1%AE%E5%AE%9A%E6%99%AE%E9%80%9A%E6%9C%BA%E5%99%A8%E4%B8%8A%E9%9C%80%E8%A6%81%E5%AE%89%E8%A3%85%E7%9A%84%20tops%20%E5%8C%85%EF%BC%8C%E6%9D%A5%E8%AF%84%E4%BC%B0%E7%B3%BB%E7%BB%9F%E5%BD%B1%E5%93%8D.][确定普通机器上需要安装的 tops 包，来评估系统影响.]]
 
-* TODO 翻译 reminders 尝试使用 orgmode 做提醒
+* DONE 翻译 reminders 尝试使用 orgmode 做提醒
   :LOGBOOK:
+  CLOCK: [2011-09-26 Mon 17:16]--[2011-09-26 Mon 17:27] =>  0:11
   :END:
 [2011-09-26 Mon 17:13]
 [[file:~/org/docs/orgmode-tut.org::*Reminders][Reminders]]
+	翻译完毕，但是具体还不知道怎么用
