--- a/org/refile.org
+++ b/org/refile.org
@@ -73,3 +73,13 @@ appropriate category.
 [2011-09-26 Mon 17:13]
 [[file:~/org/docs/orgmode-tut.org::*Reminders][Reminders]]
 	翻译完毕，但是具体还不知道怎么用
+* TODO 搞清楚 ID 是干啥用的
+  :LOGBOOK:
+  :END:
+[2011-09-26 Mon 17:36]
+[[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
+* TODO 翻译 time clocking , 学习作者为什么会沉迷于clocking.
+  :LOGBOOK:
+  :END:
+[2011-09-26 Mon 17:38]
+[[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
