--- a/org/docs/orgmode-tut.org
+++ b/org/docs/orgmode-tut.org
@@ -1174,7 +1174,9 @@ This helps to keep my agenda clutter-free.
 如果没有如果没有 clocking data ，这将会很难控制.
 
 我现在使用 punching in 和 punching out 来开始和结束我的一天. 它定义了一个默认
-的任务给clock time. 
+的随时会停止的计时任务. 我发现默认的 org-mode 设置会让我在一天当中会丢掉不少clocked
+minutes 。 如果你写一个notes 并且置为DONE 状态，那么计时会随之停止.
+
 I now use the concept of punching in and punching out at the start and
 end of my work day.  This defines a default task to clock time on
 whenever the clock would normally stop.  I found that with the default
@@ -1185,10 +1187,9 @@ clock normally stops before you have composed the note -- and good
 notes take a few minutes to write.
 
 我的 clocking 设置基本上象下面这样 :
-My clocking setup basically works like this:
 
 - Punch in (开始计时)
-  - 这个标志着一个 task, default task 无论什么时候都不
+  - 这个标志着一个 task为默认的 task 无论什么时候都计时都可以随时停止
   - This identifies a task that is the default task to clock in
     whenever the clock normally stops
 - Clock in tasks normally, and let moving to a DONE state clock out
