--- a/org/todolist.org
+++ b/org/todolist.org
@@ -1,3 +1,10 @@
+#+FILETAGS: PERSONAL
+* Tasks
+** Organization
+:PROPERTIES:
+:CLOCK_MODELINE_TOTAL: today
+:ID:       eb155a82-92b2-4f25-a3c6-0304591af2f9
+:END:
 
 * Gemstone nodes
 ** TODO @SQA 的机器需要部属上所有的gemclient
