--- a/org/refile.org
+++ b/org/refile.org
@@ -80,6 +80,7 @@ appropriate category.
 [[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
 * STARTED 翻译 time clocking , 学习作者为什么会沉迷于clocking.
   :LOGBOOK:
+  CLOCK: [2011-09-27 Tue 10:26]--[2011-09-27 Tue 10:53] =>  0:27
   CLOCK: [2011-09-26 Mon 17:55]--[2011-09-27 Tue 10:16] => 16:21
   CLOCK: [2011-09-26 Mon 17:39]--[2011-09-26 Mon 17:54] =>  0:15
   :END:
@@ -92,8 +93,16 @@ appropriate category.
 [2011-09-26 Mon 17:54]
 [[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
 6226 0901 0598 4856
-* 抽烟去							       :NOTE:
+* DONE 抽烟去							       :NOTE:
    :LOGBOOK:
+   CLOCK: [2011-09-27 Tue 10:17]--[2011-09-27 Tue 10:26] =>  0:09
    :END:
-[2011-09-27 Tue 10:17]
 [[file:~/org/docs/orgmode-tut.org::*Key%20bindings][Key bindings]]
+* DONE emacs 'bbdb 'bbdb-com 是否可以作为存储交易计划的emacs数据库来使用？ :NOTE:
+   :LOGBOOK:
+   CLOCK: [2011-09-27 Tue 10:53]--[2011-09-27 Tue 10:57] =>  0:04
+   :END:
+[2011-09-27 Tue 10:53]
+[[file:~/org/docs/orgmode-tut.org::*Handling%20Phone%20Calls][Handling Phone Calls]]
+The Insidious Big Brother Database (BBDB) is a contact management utility
+不能
