--- a/org/mylifeplan.org
+++ b/org/mylifeplan.org
@@ -1,2 +1,9 @@
 * 5年目标
- - 买一个300w的房子
+  :LOGBOOK:
+  CLOCK: [2011-09-27 Tue 11:36]
+  :END:
+ - 买一个300w的房子.
+   - 接父母到北京
+ - 买一台 15w左右的车.
+ - 精通两门外语.
+ - 
