--- a/org/refile.org
+++ b/org/refile.org
@@ -68,3 +68,8 @@
 [[file:~/org/docs/orgmode-tut.org::*Handling%20Phone%20Calls][Handling Phone Calls]]
 The Insidious Big Brother Database (BBDB) is a contact management utility
 不能
+* 如何展现每天的时间报表 								       :NOTE:
+   :LOGBOOK:
+   :END:
+[2011-09-27 Tue 11:51]
+[[file:~/org/docs/orgmode-tut.org::*Drop%20old%20style%20references%20in%20tables][Drop old style references in tables]]
