--- a/org/refile.org
+++ b/org/refile.org
@@ -47,8 +47,9 @@
 [2011-09-26 Mon 17:54]
 [[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
 6226 0901 0598 4856
-* DONE smoking							       :NOTE:
+* PHONE smoking						     :NOTE:CANCELLED:
    :LOGBOOK:
+   CLOCK: [2011-09-27 Tue 14:04]--[2011-09-27 Tue 14:15] =>  0:11
    CLOCK: [2011-09-27 Tue 11:24]--[2011-09-27 Tue 11:31] =>  0:07
    CLOCK: [2011-09-27 Tue 11:01]--[2011-09-27 Tue 11:08] =>  0:07
    CLOCK: [2011-09-27 Tue 10:17]--[2011-09-27 Tue 10:26] =>  0:09
@@ -73,3 +74,18 @@ The Insidious Big Brother Database (BBDB) is a contact management utility
    :END:
 [2011-09-27 Tue 11:51]
 [[file:~/org/docs/orgmode-tut.org::*Drop%20old%20style%20references%20in%20tables][Drop old style references in tables]]
+* TODO daily trading plan
+  :LOGBOOK:
+  CLOCK: [2011-09-27 Tue 11:51]--[2011-09-27 Tue 12:25] =>  0:34
+  :END:
+[2011-09-27 Tue 11:51]
+[[file:~/org/docs/orgmode-tut.org::*Limiting%20the%20agenda%20to%20a%20subtree][Limiting the agenda to a subtree]]
+
+* TODO 吃饭
+  :LOGBOOK:
+  CLOCK: [2011-09-27 Tue 12:25]--[2011-09-27 Tue 14:15] =>  1:50
+  :END:
+[2011-09-27 Tue 12:25]
+[[file:~/org/refile.org::*daily%20trading%20plan][daily trading plan]]
+
+
