--- a/org/refile.org
+++ b/org/refile.org
@@ -55,11 +55,6 @@
 [[file:~/org/docs/orgmode-tut.org::*Handling%20Phone%20Calls][Handling Phone Calls]]
 The Insidious Big Brother Database (BBDB) is a contact management utility
 不能
-* 如何展现每天的时间报表 								       :NOTE:
-   :LOGBOOK:
-   :END:
-[2011-09-27 Tue 11:51]
-[[file:~/org/docs/orgmode-tut.org::*Drop%20old%20style%20references%20in%20tables][Drop old style references in tables]]
 * TODO daily trading plan
   :LOGBOOK:
   CLOCK: [2011-09-27 Tue 11:51]--[2011-09-27 Tue 12:25] =>  0:34
@@ -75,3 +70,14 @@ The Insidious Big Brother Database (BBDB) is a contact management utility
 [[file:~/org/refile.org::*daily%20trading%20plan][daily trading plan]]
 
 
+* TODO cmos package and installation
+  :LOGBOOK:
+  CLOCK: [2011-09-27 Tue 14:32]--[2011-09-27 Tue 14:36] =>  0:04
+  :END:
+[2011-09-27 Tue 14:32]
+[[file:~/org/gemstone.org::*opsfree%20%E5%92%8C%20gemstone%20%E4%BF%A1%E6%81%AF%E4%BA%A4%E4%BA%92%E3%80%82][opsfree 和 gemstone 信息交互。]]
+** checkout cmos 包，并且编译
+   :LOGBOOK:
+   CLOCK: [2011-09-27 Tue 14:36]
+   :END:
+** 考虑如何加入 gemstone refresh 的包.
