--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,6 +2,7 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-09-28 Wed 09:56]
    CLOCK: [2011-09-27 Tue 14:25]--[2011-09-27 Tue 14:32] =>  0:07
    :END:
 :PROPERTIES:
