--- a/org/emacs-misc.org
+++ b/org/emacs-misc.org
@@ -1,1 +1,5 @@
 * emacs & elisp
+** SOMEDAY 需要在emacs 里面配置一个w3m.				    :WAITING:
+  - State "SOMEDAY"    from "STARTED"    [2011-09-21 Wed 14:03]
+[2011-09-20 Tue 09:20]
+[[file:~/org/todolist.org::*http://doc.norang.ca/org-mode.html][http://doc.norang.ca/org-mode.html]]
