--- a/org/health_ent.org
+++ b/org/health_ent.org
@@ -19,6 +19,7 @@
 
 *** WAITING smoking					       :NOTE:WAITING:
    :LOGBOOK:
+   CLOCK: [2011-09-29 Thu 14:30]--[2011-09-29 Thu 15:42] =>  1:12
    CLOCK: [2011-09-29 Thu 13:14]--[2011-09-29 Thu 13:22] =>  0:08
    CLOCK: [2011-09-29 Thu 11:21]--[2011-09-29 Thu 11:36] =>  0:15
    CLOCK: [2011-09-27 Tue 14:04]--[2011-09-27 Tue 14:15] =>  0:11
@@ -27,7 +28,6 @@
    CLOCK: [2011-09-27 Tue 10:17]--[2011-09-27 Tue 10:26] =>  0:09
    :END:
   :PROPERTIES:
-  :ORDERED:  t
   :END:
 [[file:~/org/docs/orgmode-tut.org::*Key%20bindings][Key bindings]]
 *** 送餐地址							       :NOTE:
