--- a/org/refile.org
+++ b/org/refile.org
@@ -1,6 +1,5 @@
 * STARTED runin 脚本
   :LOGBOOK:
-  CLOCK: [2011-09-29 Thu 13:14]
   CLOCK: [2011-09-29 Thu 12:40]--[2011-09-29 Thu 13:08] =>  0:28
   :END:
 [2011-09-29 Thu 12:39]
@@ -12,3 +11,12 @@
   :END:
 [2011-09-29 Thu 13:08]
 [[file:~/org/refile.org::*runin%20%E8%84%9A%E6%9C%AC][runin 脚本]]
+* TODO 配置 imapd + ssl
+  :LOGBOOK:
+  CLOCK: [2011-09-29 Thu 18:05]
+  :END:
+[2011-09-29 Thu 18:05]
+[[file:~/org/gemstone.org::*%E9%85%8D%E7%BD%AE%20yasnippet%20&%20flymake][配置 yasnippet & flymake]]
+
+
+
