--- a/org/snocengin.org
+++ b/org/snocengin.org
@@ -107,3 +107,11 @@ openssl enc -des -d -a -in <filename.des> -out <filename>
 [2011-09-26 Mon 10:37]
 [[file:~/org/refile.org::*%E9%9C%80%E8%A6%81%E5%AF%B9%E6%AF%8F%E4%B8%80%E4%B8%AA%E7%9B%AE%E5%89%8D%E5%B7%B2%E7%BB%8F%E6%9C%89%E7%9A%84%E5%AE%89%E8%A3%85%E5%8C%85%E8%BF%9B%E8%A1%8C%E4%B8%80%E6%AC%A1%E6%95%B4%E4%BD%93review.][需要对每一个目前已经有的安装包进行一次整体review.]]
 
+** DONE move openvpn and hgpush to turbo-dt .
+  CLOCK: [2011-09-24 Sat 23:50]--[2011-09-26 Mon 16:08] => 40:18
+[2011-09-24 Sat 23:50]
+** Write an invitation message from snoc-engineering		       :NOTE:
+   CLOCK: [2011-09-25 Sun 09:41]--[2011-09-25 Sun 09:55] =>  0:14
+[2011-09-25 Sun 09:41]
+[[file:~/org/gemstone.org::*%E7%A1%AE%E5%AE%9A%E6%99%AE%E9%80%9A%E6%9C%BA%E5%99%A8%E4%B8%8A%E9%9C%80%E8%A6%81%E5%AE%89%E8%A3%85%E7%9A%84%20tops%20%E5%8C%85%EF%BC%8C%E6%9D%A5%E8%AF%84%E4%BC%B0%E7%B3%BB%E7%BB%9F%E5%BD%B1%E5%93%8D.][确定普通机器上需要安装的 tops 包，来评估系统影响.]]
+
