--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,6 +2,11 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-09-29 Thu 13:57]--[2011-09-29 Thu 14:11] =>  0:14
+   CLOCK: [2011-09-29 Thu 13:22]--[2011-09-29 Thu 13:29] =>  0:07
+   CLOCK: [2011-09-29 Thu 11:36]--[2011-09-29 Thu 11:41] =>  0:05
+   CLOCK: [2011-09-29 Thu 11:20]--[2011-09-29 Thu 11:21] =>  0:01
+   CLOCK: [2011-09-29 Thu 10:29]--[2011-09-29 Thu 10:30] =>  0:01
    :END:
 :PROPERTIES:
 :CLOCK_MODELINE_TOTAL: today
