--- a/org/refile.org
+++ b/org/refile.org
@@ -20,3 +20,20 @@
 
 
 
+* 离职: zhangchengwei.pt@ 淘宝旅行， java 开发 			       :NOTE:
+   :LOGBOOK:
+   CLOCK: [2011-09-30 Fri 14:08]--[2011-09-30 Fri 14:15] =>  0:07
+   :END:
+[2011-09-30 Fri 14:08]
+*  :NOTE:
+   :LOGBOOK:
+   :END:
+[2011-09-30 Fri 14:20]
+
+* 离职 yuhao  03643  量子统计						       :NOTE:
+   :LOGBOOK:
+   CLOCK: [2011-09-30 Fri 14:20]
+   :END:
+[2011-09-30 Fri 14:20]
+[[file:~/org/refile.org::*][:NOTE:]]
+
