--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -41,8 +41,13 @@
 
 ****** STARTED 配置 yasnippet & flymake
        :LOGBOOK:
+       CLOCK: [2011-10-08 Sat 09:58]
+       CLOCK: [2011-10-08 Sat 09:55]--[2011-10-08 Sat 09:56] =>  0:01
        CLOCK: [2011-09-29 Thu 16:28]--[2011-09-29 Thu 18:05] =>  1:37
        :END:
+
+       如果需要安装 python-mode , 先搞定 auto-complete
+
 *** gemclient 部署
 **** 确定 gemclient 的部署步骤.
 **** 确定普通机器上需要安装的 tops 包，来评估系统影响.
