--- a/org/refile.org
+++ b/org/refile.org
@@ -37,3 +37,10 @@
 [2011-09-30 Fri 14:20]
 [[file:~/org/refile.org::*][:NOTE:]]
 
+* bh/clock-in-last-time 					       :NOTE:
+   :LOGBOOK:
+   CLOCK: [2011-10-08 Sat 09:56]--[2011-10-08 Sat 09:58] =>  0:02
+   :END:
+[2011-10-08 Sat 09:56]
+[[file:~/org/orgmode.org::*%E9%9C%80%E8%A6%81%E6%90%9E%E6%B8%85%E6%A5%9A%E4%BB%80%E4%B9%88%E6%98%AFproject.%20%E9%80%9A%E5%B8%B8%E7%9A%84%E4%BD%BF%E7%94%A8%E6%83%85%E6%99%AF%E6%98%AF%E4%BB%80%E4%B9%88][需要搞清楚什么是project. 通常的使用情景是什么]]
+需要 clock-in last time 的意义, 是否是找到最后一个任务并且 clock in?
