--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -41,7 +41,7 @@
 
 ****** STARTED 配置 yasnippet & flymake
        :LOGBOOK:
-       CLOCK: [2011-10-08 Sat 09:58]
+       CLOCK: [2011-10-08 Sat 09:58]--[2011-10-08 Sat 11:30] =>  1:32
        CLOCK: [2011-10-08 Sat 09:55]--[2011-10-08 Sat 09:56] =>  0:01
        CLOCK: [2011-09-29 Thu 16:28]--[2011-09-29 Thu 18:05] =>  1:37
        :END:
