--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,6 +2,7 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-10-08 Sat 09:54]--[2011-10-08 Sat 09:55] =>  0:01
    CLOCK: [2011-09-29 Thu 13:57]--[2011-09-29 Thu 14:11] =>  0:14
    CLOCK: [2011-09-29 Thu 13:22]--[2011-09-29 Thu 13:29] =>  0:07
    CLOCK: [2011-09-29 Thu 11:36]--[2011-09-29 Thu 11:41] =>  0:05
