--- a/org/mylifeplan.org
+++ b/org/mylifeplan.org
@@ -6,6 +6,17 @@
   :END:
  - 买一个300w的房子.
    - 接父母到北京
- - 买一台 15w左右的车.
+ - 买一台 30w左右的车.
  - 精通两门外语.
  - 外汇黄金交易可以实现稳定盈利。
+
+收入组成:
+
+目前状况
+120w 外汇加港股.
+77w
+
+197w 
+(- 330000 (+ (- (* (* (+ 16000  6500) 13) 4) 400000) 1200000))
+
+
