--- a/org/mylifeplan.org
+++ b/org/mylifeplan.org
@@ -24,6 +24,22 @@
 
 50w
 
+8.7 平 b 仓  成本 8.2 平仓后守  守 6.33 底.
+
+6.79  a 仓  
+
+交替守底. 
+
+风险控制:
+
+仓位: 最大仓位不超过 50%
+
+(setq a '(3.5 4 4.5 5 5.5 6 6.5 7 7.5 8 8.5))
+(dolist (b a)
+(message "%f|%f" b (* b (/ 300 22.5)) )
+)
+
+46w 13w
 
 
 
